1427/BoLibNative/NativeBoLib.cs

using System;
using System.Runtime.InteropServices;

namespace PDTUtils.Native
{
	[StructLayout(LayoutKind.Sequential)]
	public struct GamesInfo
	{
		[MarshalAs(UnmanagedType.LPStr)]
		public string name;
		[MarshalAs(UnmanagedType.LPStr)]
		public string hash_code;
		[MarshalAs(UnmanagedType.LPStr)]
		public string path;

		public string Name { get; set; }
		public string HashCode { get; set; }
		public string Path { get; set; }
	}
    
    //[StructLayout(LayoutKind.Explicit)]
    [StructLayout(LayoutKind.Sequential)]
    struct SpanishRegional
    {
        //[FieldOffset(0)]
        public uint MaxStake;
        //[FieldOffset(4)]
        public uint MaxStakeFromBank;
        //[FieldOffset(8)]
        public uint StakeMask;
        //[FieldOffset(12)]
        public uint MaxWinPerStake;
        //[FieldOffset(16)]
        public uint MaxCredit;
        //[FieldOffset(20)]
        public uint MaxReserve;
        //[FieldOffset(24)]
        public uint MaxBank;
        //[FieldOffset(28)]
        public uint MaxPlayerPoints;
        //[FieldOffset(32)]
        public uint NoteEscrow;
        //[FieldOffset(36)]
        public uint Rtp;
        //[FieldOffset(40)]
        public uint Gtime;
        //[FieldOffset(44)]
        public uint ChangeValue;
        //[FieldOffset(48)]
        public uint MaxNote;
        //[FieldOffset(52)]
        public uint BankToCredits;
        //[FieldOffset(56)]
        public uint ChargeConvertPoints;
        //[FieldOffset(60)]
        public uint CycleSize;
        //[FieldOffset(64)]
        public uint FastTransfer;
    }
    
    enum Performance
    {
        MoneyInLt = 0,
        MoneyOutLt,
        HandPayLt,
        CashboxLt,
        NoGamesLt,
        WageredLt,
        WonLt,
        MoneyInSt,
        MoneyOutSt,
        HandPaySt,
        CashboxSt,
        NoGamesSt,
        WageredSt,
        WonSt
    }

    static class BoLib
    {
#if DEBUG
        const string DllName = "BoLibDllD.dll";
#else
        const string dllName = "BoLibDll.dll";
#endif
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int setEnvironment();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int closeSharedMemory();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getDoorStatus();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getCountryCode();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public unsafe static extern string getCountryCodeStr();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int refillKeyStatus();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getError();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public unsafe static extern string getCurrentError();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public unsafe static extern string getErrorText();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public unsafe static extern string getLastGame(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U4)]
        public unsafe static extern UInt32 getWinningGame(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern ulong getPerformanceMeter(byte offset);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern ulong getGamePerformanceMeter(uint offset, uint meterType);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getLocalMasterVolume();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U4)]
        public unsafe static extern UInt32 getGameModel(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getGameTime(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getGameDate(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getGameCreditLevel(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getGameWager(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getSwitchStatus(byte offset, byte mask);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getCredit();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getBank();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getLastNote(int index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint[] getLastNotes();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getHopperFloatLevel(byte hopper);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getHopperDivertLevel(byte hopper);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte getHopperDumpSwitchActive();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte getHopperDumpSwitch();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getRequestEmptyLeftHopper();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getRequestEmptyRightHopper();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte getBnvType();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getRecyclerFloatValue();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getRefillCtr(byte hopper);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte getLeftHopper();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte getMiddleHopper();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte getRightHopper();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getMinPayoutValue();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getCashIn(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getCashOut(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getNotesIn(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getNotesOut(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getRefillValue(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getVtp(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getWon(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getHandPay(int meter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getTicketsPay(int meter);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public unsafe static extern string getSerialNumber();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern UInt32 getReconciliationMeter(byte offset);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public unsafe static extern string getEDCTypeStr();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getNumberOfGames();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getBoLibVersion();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void getRegionalValues(int index, ref SpanishRegional region);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void getDefaultRegionValues(int index, ref SpanishRegional region);
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern void getActiveRegionValues(int index, ref SpanishRegional region);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public unsafe static extern string getErrorMessage(string str, int code);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getUtilsRelease();
        
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern ulong getTPlayMeter(byte offset);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getUkCountryCodeB3();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getUkCountryCodeC();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getSpainCountryCode();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern int getTargetPercentage();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte getRecyclerChannel();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern ulong getMaxHandPayThreshold();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getCabinetType();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern uint getTerminalType();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public unsafe static extern byte combined();
